Update base image and increase heap size